<resources>
    <string name="app_name">El Tuncazo</string>
    <string name="google_maps_api">AIzaSyBOh2QksmS_Y2RWiSOOKybmn3Q3xKzou04</string>
    <string name="app_version">V. 1.0.5</string>

    <string name="top_icon">TOP ICON</string>
    <string name="numero_telefonico">Número Telefónico</string>
    <string name="ingresar">Ingresar</string>
    <string name="telefono_requerido">Teléfono es requerido</string>
    <string name="confirmar_numero">Confirmar Número Telefónico</string>
    <string name="error">Error</string>
    <string name="error_enviar_codigo">Error al enviar el código, reintentar de nuevo</string>
    <string name="terminos_condiciones">Terminos y Condiciones</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="sin_conexion">Sin conexión</string>
    <string name="aceptar">Aceptar</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="codigo_incorrecto">Código incorrecto</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>
    <string name="nota_minimo_4_caracteres">Nota: Mínimo 4 caracteres para contraseña</string>
    <string name="nombre_requerido">Nombre es requerido</string>
    <string name="usuario_requerido">Usuario es requerido</string>
    <string name="password_requerido">Contraseña es requerido</string>
    <string name="minimo_4_caracter_password">Mínimo 4 caracteres para contraseña</string>
    <string name="completar_registro">Completar registro</string>
    <string name="registrase">Registrarse</string>
    <string name="producto">Producto</string>
    <string name="usuario_bloqueado_titulo">Usuario Bloqueado</string>
    <string name="usuario_bloqueado">Contactar a la Administración</string>
    <string name="servicio_sera_brindado">El Servicio sera brindado solo en las partes marcadas en el mapa.</string>
    <string name="google_maps_no_instalado">Porfavor instalar Servicios Google Play</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="sin_cobertura">Cargando Cobertura</string>
    <string name="sin_servicio">Sin Servicio</string>
    <string name="ubicación_desconocida">Ubicación desconocida</string>
    <string name="permiso_denegado">Permiso denegado</string>
    <string name="permiso_localizacion_denegado">Permiso para acceder a localización denegado</string>
    <string name="lo_sentimos_no_ofrecemos_nuestro">Lo sentimos, no ofrecemos nuestro servicio en esta zona</string>
    <string name="guardar_direccion">Guardar Dirección</string>
    <string name="guardado">Guardado</string>
    <string name="la_nueva_direccion">La nueva dirección ha sido agregada correctamente.</string>
    <string name="password_incorrecta">Contraseña incorrecta</string>
    <string name="registra_tu_negocio">Registra tu negocio</string>
    <string name="se_requiere_minimo">No se puede eliminar, se requiere mínimo 1 dirección</string>
    <string name="seleccionar_direccion">Seleccionar Dirección</string>
    <string name="direccion_seleccionada">Dirección Seleccionada</string>
    <string name="borrar_esta_direccion">Borrar esta dirección</string>
    <string name="elegir_cantidad">Elegir cantidad</string>
    <string name="formulario_dinero">Formulario para agregar Dinero a su Monedero</string>
    <string name="nombre_de_propietario">Nombre del Propietario</string>
    <string name="numero_de_tarjeta">Número de Tarjeta</string>
    <string name="comprar">Comprar</string>
    <string name="que_quieres_pedir">¿Qué quieres pedir?</string>
    <string name="no_encontramos_negocios">No encontramos Negocios para tu búsqueda.</string>
    <string name="cerrado_temporalmente">Cerrado Temporalmente</string>
    <string name="menu">Menu</string>
    <string name="horarios">Horarios</string>
    <string name="buscar_producto">Buscar Producto</string>
    <string name="se_eliminara">Se eliminara todos los productos agregados</string>
    <string name="borrar_carrito">Borrar Carrito</string>
    <string name="bloqueado">Bloqueado</string>

    <string name="datos_incorrectos">Datos incorrectos</string>
    <string name="correo_no_encontrado">Correo eléctronico no Encontrado</string>
    <string name="correo_electronico_opc">Correo eléctronico (Opcional)</string>
    <string name="correo_electronico">Correo eléctronico</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="telefono_ya_registrado">El télefono ya esta registrado</string>
    <string name="bienvenido_de_nuevo">Bienvenido de Nuevo</string>
    <string name="contrasena_olvidada">Contraseña olvidada</string>
    <string name="recuperacion_de_contrasena">Recuperación de contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="ingresa_tu_codigo">Ingresa tu código</string>
    <string name="enviar_codigo">Enviar código</string>
    <string name="reenviar_sms">reenviar SMS</string>
    <string name="codigo_enviado">Código enviado</string>
    <string name="cambio_de_contrasena">Cambio de Contraseña</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="contrasena_actualizada">Contraseña actualizada</string>
    <string name="error_codigo_no_enviado">Error al enviar el código. Reintentar</string>
    <string name="servicios">Servicios</string>
    <string name="borrar">Borrar</string>
    <string name="ver_productos">Ver Productos</string>
    <string name="seleccionar_ubicacion">Seleccionar ubicación</string>
    <string name="cargando">Cargando</string>
    <string name="direccion_requerido">Dirección requerido</string>
    <string name="opciones">Opciones</string>
    <string name="nombre">Nombre</string>
    <string name="direccion">Dirección</string>
    <string name="numero_casa">Número de Casa</string>
    <string name="punto_referencia">Punto de Referencia</string>
    <string name="si">Si</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="actualizar">Actualizar</string>
    <string name="correo_requerido">Correo electrónico es requerido</string>
    <string name="correo_invalido">Correo electrónico es inválido</string>
    <string name="perfil_actualizado">Perfil actualizado</string>
    <string name="cerrado">Cerrado</string>
    <string name="carrito">Carrito</string>
    <string name="mis_direcciones">Mis Direcciones</string>
    <string name="seleccionado">seleccionado</string>
    <string name="usuario">Usuario</string>
    <string name="agregar_a_la_orden">"Agregar a la orden"</string>

    <string name="historial_compras">Historial de Compras</string>
    <string name="telefono">Teléfono</string>
    <string name="agregar_direccion">Agregar una Dirección</string>
    <string name="direccion_borrada">Dirección Borrada</string>
    <string name="agregar_1_orden">"Agregar a la orden 1 - $"</string>
    <string name="cantidad">Cantidad </string>
    <string name="unidades_disponibles">Unidades disponibles:</string>
    <string name="orden_iniciada">Orden iniciada</string>
    <string name="servicio_diferente">Ya tienes una orden en proceso con %1$s, ¿Deseas eliminarla y crear una orden nueva con este comercio?</string>
    <string name="ver_mi_orden">Ver mi orden - Sub Total $%1$s</string>
    <string name="carrito_vacio">Carrito de Compras vacío </string>
    <string name="orden_procesar">Sub total: $%1$s</string>
    <string name="carrito_borrado">Carrito de Compras Borrado </string>
    <string name="producto_no_encontrado">Producto no encontrado</string>
    <string name="producto_eliminado">Producto eliminado</string>
    <string name="nota_para_este_producto">Nota para este producto</string>
    <string name="actualizado">Actualizado</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="direccion_de_envio">Dirección</string>
    <string name="cambio_moneda">$00</string>
    <string name="necesita_cambio">Necesita cambio?</string>
    <string name="nota">Nota</string>
    <string name="confirmar_orden">Confirmar Orden</string>
    <string name="carrito_no_encontrado">Carrito no encontrado</string>
    <string name="enviar_calificacion">Enviar calificación</string>
    <string name="agregar_direccion_nueva">Por favor agregar una nueva dirección de envío</string>
    <string name="direccion_requerida">Dirección es Requerida</string>
    <string name="orden_enviada">Orden Enviada</string>
    <string name="descripcion_negocio">Cafe, Helados Y Pupuseria El Tuncazo</string>
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>
    <string name="metodo_entrega">Metodo Entrega</string>
    <string name="nota_orden">Nota para la orden (Ejemplo: tocar timbre)</string>
    <string name="usuario_ya_registrado">El usuario ya se encuentra Registrado</string>
    <string name="correo_ya_registrado">El correo ya se encuentra Registrado</string>
    <string name="perfil">Perfil</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="direcciones">Direcciones</string>

    <string name="se_requiere_permiso_mostrar">Se requiere permisos para mostrar Mapa</string>
    <string name="permiso_requerido">Permiso requerido</string>
    <string name="ajustes">Ajustes</string>
    <string name="permiso_localizacion_requerido">Se requiere permiso de Localización para acceder a su ubicación</string>
    <string name="ok">ok</string>
    <string name="mapa">Mapa</string>
    <string name="el_servicio_sera">El Servicio sera brindado solo en las partes marcadas en el Mapa</string>
    <string name="nueva_direccion">Nueva Dirección</string>
    <string name="agregar_al_carrito">Agregar al Carrito</string>
    <string name="nota_requerida">Nota requerida</string>
    <string name="maximo_400_caracteres">400 caracteres máximo para nota</string>
    <string name="producto_no_disponible">Producto no disponible</string>
    <string name="porfavor_eliminarlo">Por favor eliminarlo de su carrito de compras deslizando hacia los lados. Gracias.</string>
    <string name="producto_no_dispo_deslizar">El producto Marcado no se encuentra disponible, puede eliminarlo deslizando hacia los lados. Gracias.</string>
    <string name="orden">Orden</string>
    <string name="para_eliminar">Para eliminar un producto, deslice hacia los lados</string>
    <string name="carrito_compras_no_encontrado">Carrito de compras no encontrado</string>
    <string name="procesar_orden">Procesar Orden</string>
    <string name="estar_pendiente">"Por favor estar pendiente de la confirmación de su orden"</string>
    <string name="ordenes_activas">Ordenes activas</string>
    <string name="estados">Estados</string>
    <string name="orden_cancelada">Orden cancelada</string>
    <string name="orden_pendiente">Orden pendiente</string>
    <string name="finalizar_orden">Finalizar Orden</string>
    <string name="su_orden_ya_esta_iniciada">Su orden ya fue Iniciada</string>
    <string name="gracias">Gracias</string>
    <string name="cancelar_orden">Cancelar Orden</string>
    <string name="cargando_cobertura">Cargando Cobertura</string>
    
    


</resources>