<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:background="@drawable/icono_wave"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cambio_de_contrasena"
                    android:textAlignment="center"
                    android:textColor="@color/colorNegro"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="16dp"
                    app:hintTextColor="@color/colorNegro"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_redondo"
                        android:drawableStart="@drawable/icono_candado_gris"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/arthura_regular"
                        android:hint="@string/nueva_contrasena"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textColor="@color/colorNegro"
                        android:textSize="14sp"
                        tools:ignore="Autofill" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/nota_minimo_4_caracteres"
                    android:textColor="@color/colorGris"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnCambiar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="35dp"
                    android:fontFamily="@font/arthura_medium"
                    android:layout_marginBottom="30dp"
                    android:layout_marginRight="32dp"
                    android:background="@drawable/button_corner_color"
                    android:text="@string/cambiar_contrasena"
                    android:textColor="@color/colorBlanco" />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>