<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/toolbar_borrar_direccion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/icono_usuario_gris"
                        android:text="@string/nombre"
                        android:fontFamily="@font/arthura_medium"
                        android:textColor="@color/colorNegro"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/arthura_regular"
                        android:paddingLeft="15dp"
                        android:textColor="@color/colorNegro"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableLeft="@drawable/icono_telefono"
                        android:text="@string/telefono"
                        android:fontFamily="@font/arthura_medium"
                        android:textColor="@color/colorNegro"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txtTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:fontFamily="@font/arthura_regular"
                        android:paddingLeft="15dp"
                        android:textColor="@color/colorNegro"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableLeft="@drawable/icono_casa"
                        android:text="@string/direccion"
                        android:textColor="@color/colorNegro"
                        android:textSize="16sp"
                        android:fontFamily="@font/arthura_medium"/>

                    <TextView
                        android:id="@+id/txtDireccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="15dp"
                        android:fontFamily="@font/arthura_regular"
                        android:textColor="@color/colorNegro"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableLeft="@drawable/icono_gps"
                        android:text="@string/punto_referencia"
                        android:textColor="@color/colorNegro"
                        android:textSize="16sp"
                        android:fontFamily="@font/arthura_medium"/>

                    <TextView
                        android:id="@+id/txtReferencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="15dp"
                        android:fontFamily="@font/arthura_regular"
                        android:textColor="@color/colorNegro"
                        android:textSize="15sp" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnSeleccionar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="25dp"
                    android:fontFamily="@font/arthura_medium"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/button_corner_color"
                    android:text="@string/seleccionar_direccion"
                    android:textColor="@color/colorBlanco" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>